--- a/аааа.html
+++ b/аааа.html
@@ -24,9 +24,9 @@
         <!-- Блок содержания --> 
         <h><p><b>Содержание</b></p></h>
         <ol>
-            <u><li> <a href ="#anchor"> История</a></li></u>
+            <u><li> <a href ="#history"> История</a></li></u>
             <ol>
-            <u><li> <a href= "#anchor">Этимология, прозвища</a></li></u>
+            <u><li> <a href= "#history-etim">Этимология, прозвища</a></li></u>
             <u><li> <a href="#anchor">Основание</a></li></u>
             <u><li> <a href="#anchor">XX век</a> </li></u>
             </ol>
@@ -51,8 +51,8 @@
         <li><a href="#anchor">Города-побратимы</a></li></u>
         </ol>
         <h>
-            <b><a id="achor">История</a></b>
-            <b><p><a id="achor">Этимология, прозвища</a></p></b>
+            <b><a id="history">История</a></b>
+            <b><p><a id="history-etim">Этимология, прозвища</a></p></b>
             </h>
             <h>
                 <figure>
