--- a/аааа.html
+++ b/аааа.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
     <head>
-         <h>Хьюстон </h>
+         <h><b>Хьюстон </b></h>
     </head>
     <body>
-        <b> Хьюстон</b>
         <p><b>Хьюстон</b>(англ. Houston) — четвёртый по количеству жителей город в Соединённых Штатах Америки
             и крупнейший город в штате Техас с населением 2 319 603 человека на 2017 год. Хьюстон является
             административным центром округа Харрис, а также главным экономическим центром агломерации
@@ -413,6 +412,216 @@
                                                     городе находится 17,5 % рабочих мест, занятых в сфере нефетехимии, из всех мест в США (112,6
                                                     тысячи из 643,3 тысяч). Город занимает лидирующее место по производству товаров из полиэтилена
                                                     (38,7 % от всего производства в США), поливинилхлорида (35,9 %) и полипропилена (48,4 %).</p>
+                                                    <b><a id="cosmic">Авиакосмическая промышленность</a></b>
+                                                    <figure>
+                                                        <img src="img/Aerial_View_of_the_Johnson_Space_Center.jpg">
+                                                        <figcaption>Космический центр им. Джонсона</figcaption>
+                                                    </figure>
+                                                    <p>В Хьюстоне располагается космический центр имени Линдона Джонсона, представляющий собой
+                                                        научно-исследовательское и проектно-конструкторское предприятие, в котором работают 15000
+                                                        человек (3000 инженеров и учёных, 12000 остальных рабочих). Всего в городе располагаются больше
+                                                        150 организаций, имеющих дело с космической отраслью.</p>
+                                                        <p>В районе Хьюстона находятся производственные мощности компании Lockheed Martin, а также офис
+                                                            программы строительства космического корабля «Орион» для NASA. В городе расположены
+                                                            производственные мощности компании Boeing, а также штаб-квартира подразделения «Boeing Space
+                                                            Exploration», занимающаяся исследованием космических систем. Мощности компании Beechcraft,
+                                                            находящиеся в аэропорте им. Хобби, занимаются техническим обслуживаем и ремонтом воздушных
+                                                            судов. Компания Barrios Technology выполняет контракты для NASA, связанные с кораблём «Орион»,
+                                                            а также разрабатывает программное обеспечение для воздушных судов Boeing. Другими крупными
+                                                            исполнителями заказов NASA в Хьюстоне являются: Computer Sciences Corporation — техническое
+                                                            обслуживание и модификация самолётов, Jacobs Engineering Group — машиноведение, L-3
+                                                            Communications — роботехника, MEI Technologies — электрические инженерные системы,
+                                                            Oceaneering International — скафандры и прилагающееся аппаратное обеспечение, Raytheon —
+                                                            лаборатория нейтральной плавучести и макеты космических короблей, SAIC — безопасность и
+                                                            поддержка миссий, United Space Alliance — координационный центр информации, United
+                                                            Technologies — внекорабельная деятельность, Wyle Laboratories — космическая биология.</p>
+
+                            </h>
+
+                            <!---Блок населения-->
+                            <h>
+                                <b><a i="population"></a></b>
+                                <b><a id="dinamic">Динамика и структура населения</a></b>
+                                <table>
+                                    <tr colspan="3">
+                                        <th>Перепись населения</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Год перепис.</th>
+                                        <th>Нас.</th>
+                                        <th>%±</th>
+                                    </tr>
+                                    <tr>
+                                        <th>1850</th>
+                                        <td>2396</td>
+                                        <td>-</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1860</th>
+                                        <td>4845</td>
+                                        <td>102.2%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1870</th>
+                                        <td>9332</td>
+                                        <td>92.6%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1880</th>
+                                        <td>16 513</td>
+                                        <td>77%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1890</th>
+                                        <td>27 557</td>
+                                        <td>66.9%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1900</th>
+                                        <td>44 633</td>
+                                        <td>62%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1910</th>
+                                        <td>78 800</td>
+                                        <td>76.6%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1920</th>
+                                        <td>138 276</td>
+                                        <td>75.5%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1930</th>
+                                        <td>292 352</td>
+                                        <td>111.4%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1940</th>
+                                        <td>384 514</td>
+                                        <td>31.5%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1950</th>
+                                        <td>596 163</td>
+                                        <td>55%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1960</th>
+                                        <td>938 219</td>
+                                        <td>57.4%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1970</th>
+                                        <td>1 232 802</td>
+                                        <td>31.4%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1980</th>
+                                        <td>1 595 138</td>
+                                        <td>29.4%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>1990</th>
+                                        <td>1 630 553</td>
+                                        <td>2.2%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2000</th>
+                                        <td>1 953 631</td>
+                                        <td>19.8%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>2010</th>
+                                        <td>2 100 263</td>
+                                        <td>7.5%</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Текущий 2017</th>
+                                        <td>2 319 603</td>
+                                        <td>10.4%</td>
+                                    </tr>
+                                </table>
+                                <p>1850-2017 Переписи населения в 1790—2010 годах</p>
+                                <figure>
+                                    <img src="img/Race_and_ethnicity_2010_Houston.png">
+                                    <figcaption>Этническая карта Хьюстона</figcaption>
+                                </figure>
+                                <p>Согласно данным переписи населения США в 2010 году в городе проживало 2 100 263 человек, это на
+                                    7,5 % больше, чем в 2000 году. По оценке бюро переписи населения США на 1 января 2017 года
+                                    население составило 2 319 603 человека. Население города, начиная с его основания, постоянно
+                                    растёт: в 1960-х годах оно достигло 1 млн жителей, а в 2000-х годах превысило 2 млн. Плотность
+                                    населения в среднем составляет 1494 чел./км2.</p>
+                                    <p>Возрастной состав населения: до 19 лет — 28,67 %; от 20 до 44 лет — 39,83 %; от 45 до 64 лет —
+                                        22,45 %; от 65 лет — 9,05 %. Средний возраст составляет 32 года. Количество женщин от всего
+                                        населения — 49,82 %, мужчин — 50,18 %.</p>
+                                        <b><a id="language">Этнический и конфессиональный состав, языки</a></b>
+                                        <p>Из-за близости к Мексике доля выходцев из Латинской Америки составляет 43,8 % от всего
+                                            населения. В абсолютных цифрах численность латиноамериканцев выросла с 731 до 920 тысяч
+                                            человек за период 2000—2010 годов. Второе место в расовом составе города занимают белые люди,
+                                            которые составляют 25,6 % от городского населения — их численность за десятилетие снизилась на
+                                            10 % с 602 до 538 тысяч человек. Также значительное население занимают афроамериканцы (23,1 %)
+                                            и азиаты (6,15 %), чуть более 1 % составляют лица других национальностей. Иммиграция в Хьюстон
+                                            в 2015 году составила 19 630 человек. 28 % жителей Хьюстона родились в другой стране: 72,5 % —
+                                            из Латинской Америки, 18,9 % — из Азии, 3,9 % и 3,8 % — из Африки и Европы соответственно, 0,2
+                                            % — из Океании. До 1960-х годов основными иммигрантами были люди из Европы, но с принятием в
+                                            1965 году нового закона об иммиграции и гражданстве, отменившего квоты по национальности,
+                                            большинство иммигрантов стало приезжать из Латинской Америки, Азии и Африки. В 2005 году 240
+                                            тысяч жителей Нового Орлеана, на который обрушился ураган «Катрина», эвакуировались в
+                                            Хьюстон. Впоследствии, до 40 тыс. человек осталось жить в городе.</p>
+                                            <p>50 % жителей города разговаривают только на английском языке. 34 % жителей разговаривают на
+                                                испанском языке, по 1 % — на вьетнамском и китайском, по 0,2-0,4 % — на французском, урду,
+                                                арабском, хинди, тагальском и корейском языках. Всего в городе разговаривают более чем на 100
+                                                языках.
+                                                18,44 % жителей исповедуют католицизм, 16,29 % — баптизм, 4,68 % — методизм, 2,86 % — ислам,
+                                                0,53 % — иудаизм. Всего исповедуют религию 58,4 % хьюстонцев, 41,6 % — неверующие.</p>
+                                                
+
+                                                <!---Блок СМИ-->
+                                                <h>
+                                                    <b><a id="news">Средства массовой информации</a></b>
+                                                    <figure>
+                                                        <img src="img/Melcher_Center_for_Public_Broadcasting.jpg">
+                                                        <figcaption>Вещательный центр, откуда вещают радиостанции KUHT и KUHF</figcaption>
+                                                    </figure>
+                                                    <p>В Хьюстоне вещают 19 телеканалов. Наиболее известные телеканалы являются аффилированными
+                                                        каналами крупных телекомпаний: KPRC-TV (NBC), KHOU-TV (CBS), KTRK-TV (ABC), KRIV (Fox),
+                                                        KIAH (The CW) и KTXH (MyNetworkTV). Телеканал KUHT является членом национальной
+                                                        общественной телевещательной службы PBS.</p>
+                                                        <p>В Хьюстоне вещают 29 радиостанций. Одна из крупнейших радиостанций, KUHF, принадлежит
+                                                            Хьюстонской университетской системе.</p>
+                                                            <p><i>Houston Chronicle</i> — крупнейшая ежедневная газета Хьюстона и штата Техас, которая принадлежит
+                                                                нью-йоркской корпорации Hearst Corporation. В 2014 году ежедневный тираж газеты составлял 356
+                                                                347 экземпляров, что ставит её на 16 место по тиражу среди всех газет США. До 1995 года
+                                                                существовала <i>Houston Post</i>, но была поглощена <i>Houston Chronicle</i>. На сегодняшний день
+                                                                единственным основным альтернативным городским изданием остаётся еженедельник <i>Houston Press</i>,
+                                                                его еженедельный тираж 2016 году составлял 43 810 экземпляров. В Хьюстоне выпускается газета
+                                                                <i>Houston Business Journal</i>, которая является частью компании American City Business Journals.</p>
+                                                                <b><a id="cityes">Города-побратимы</a></b>
+                                                                <p>Согласно городскому сайту, у Хьюстона 18 городов-побратимов (в последний раз этот список
+                                                                    расширялся в 2015 году, когда к нему присоединилась Басра):</p>
+                                                                    <ul>
+                                                                        <li>Абу-Даби (ОАЭ);</li>
+                                                                        <li>Абердин (Шотландия);</li>
+                                                                        <li>Гуаякиль (Эквадор);</li>
+                                                                        <li>Карачи (Пакистан);</li>
+                                                                        <li>Баку (Азербайджан);</li>
+                                                                        <li>Лейпциг (Германия);</li>
+                                                                        <li>Ницца (Франция);</li>
+                                                                        <li>Луанда (Ангола);</li>
+                                                                        <li>Ставангер (Норвегия);</li>
+                                                                        <li>Тайбэй (Тайвань);</li>
+                                                                        <li>Стамбул (Турция);</li>
+                                                                        <li>Перт (Австралия);</li>
+                                                                        <li>Тюмень (Россия);</li>
+                                                                        <li>Тампико (Мексика);</li>
+                                                                        <li>Уэльва (Испания);</li>
+                                                                        <li>Тиба (Япония);</li>
+                                                                        <li>Шэньчжэнь (Китай);</li>
+                                                                        <li>Басра (Ирак)</li>
+                                                                    </ul>
+                                                                
+                                                            </h>
                             </h>
 
     </body>
