--- a/аааа.html
+++ b/аааа.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
     <head>
-         <h><b>Хьюстон </b></h>
+        <!-- Подключаем css -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h><b>Хьюстон </b></h>
         <p><b>Хьюстон</b>(англ. Houston) — четвёртый по количеству жителей город в Соединённых Штатах Америки
             и крупнейший город в штате Техас с населением 2 319 603 человека на 2017 год. Хьюстон является
             административным центром округа Харрис, а также главным экономическим центром агломерации
@@ -21,7 +23,7 @@
             хьюстонский судоходный канал, крупнейший в мире Техасский медицинский центр.</p>
 
         <!-- Блок содержания --> 
-        <h><p><b>Содержание</b></p></h>
+        <h><b>Содержание</b></h>
         <ol>
             <u><li> <a href ="#history"> История</a></li></u>
             <ol>
